metadata/force-app/main/default/objects/CustomName_XbmDq__c/CustomName_XbmDq__c.object-meta.xml
<CustomObject>
    <description>Description_iPxMQ</description>
    <label>CustomLabel_bDCEb</label>
    <nameField>
        <label>CustomLabel_bDCEb</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_bDCEbs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>