metadata/force-app/main/default/objects/CustomName_XbmDq__c/fields/CustomField_HVbJK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_HVbJK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjnKQc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>